styles/main.scss
@import 'variables';
@import 'bootstrap';
@import 'bootstrap-overrides';
@import 'font-awesome';
@import 'loading-bar';

/* start-imports */
/* end-imports */

body {
  background-color: #efefef;
  overflow-x: hidden;
}

.card {
  padding: 1.5rem;
  background-color: #fff;
  box-shadow: 0 1px 2px #aaa;
  border-radius: 3px;
  margin-bottom: 20px;
}

[ng-click] {
  cursor: pointer;
}

.clickable {
  cursor: pointer;
  color: $link-color;
}

.recalls-summary {
  font-size: 1.5em;
  text-align: center;
  color: rgba(0,0,0,.5);
  margin: 20px;

  .value {
    font-size: 1.5em;
    font-weight: bold;
    color: rgba(0,0,0,1);
  }
}

